Java support 6